# kate

./: .gitignore  .pre-commit-config.yaml  DEBUGGING_STATUS_NOTES.md  HANDOFF_NOTE_FOR_DEVELOPER.md  KATE_FINAL_FIX.sh  KATE_PRODUCTION_PLAN.md  KATE_RAG_BACKEND_DOCUMENTATION.md  KATE_STATUS_REPORT.md  LICENSE  README.md  debug_startup.sh  demo_voice_comparison.py  fix_kate.sh  fix_ui_scaling.py  kate.code-workspace  kate_fixed.sh  kate_technical_architecture.md  multi_modal_ai_plan.md  prompt.txt  pyproject.toml  pyproject_minimal.toml  pyproject_original.toml  quick_fix.sh  start_kate.sh  test_kate_final.sh  test_kate_import.sh  test_kate_ui_components.py  test_kate_voice_complete.py  test_kate_with_qt_env.sh  test_qt_basic.py  test_qt_display.py  test_voice_integration.py  test_voice_options.md  test_voice_standalone_direct.py  voice_demo.py  web_server_standalone.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.zencoder/rules/: repo.md
app/: __init__.py  main.py  web_server.py
app/config/: assistants.json
app/core/: __init__.py  application.py  config.py  events.py
app/database/: __init__.py  manager.py  models.py
app/llm_providers/: vision_provider.py
app/providers/: __init__.py  base.py  ollama_provider.py  vllm_provider.py
app/services/: __init__.py  assistant_service.py  audio_processing_service.py  background_processing_service.py  code_analysis_service.py  code_review_service.py  code_sandbox.py  collaboration_service.py  conversation_embedding_service.py  diagram_analysis_service.py  document_processor.py  embedding_service.py  multi_modal_rag_service.py  rag_config_service.py  rag_evaluation_service.py  rag_integration_service.py  rag_service.py  real_voice_chat_service.py  retrieval_service.py  screen_capture_service.py  search_service.py  update_manager.py  vector_store.py  vision_processing_service.py  visual_search_service.py  voice_chat_service.py
app/templates/: chat.html  index.html
app/themes/: __init__.py  base.py  manager.py
app/ui/: main_window.py
app/ui/components/: assistant_panel.py  audio_visualization.py  chat_area.py  context_display.py  conversation_sidebar.py  document_manager.py  evaluation_dashboard.py  message_bubble.py  progress_indicators.py  settings_window.py  simple_voice_widget.py  status_bar.py  voice_settings_widget.py
app/utils/: __init__.py  logging.py  platform.py  system.py
docs/: dev_checklist.md  dev_user_guide.md  plan.txt
docs/adr/: ADR-0001-timezone-alias-strategy.md
kate_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_assistant_panel.py  test_assistant_service.py  test_database.py  test_rag_pipeline.py
